--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "timedoctor/test-gitflow",
+    "version": "1.0",    
     "authors": [
         {
             "name": "Abdallah Mosen",
